server/compilers/goLiteJS/src/test/ml1/valid/cast1.go
// type cast syntax
package main

type num int
var x int = 3
var y num = num(x)
