server/compilers/goLiteJS/src/test/ml1/invalid/decl22.go
// missing assignment operator
package main

var x int 5
